--- a/app/src/main/res/layout/activity_receive_history.xml
+++ b/app/src/main/res/layout/activity_receive_history.xml
@@ -36,8 +36,7 @@
                 android:id="@+id/textView7"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:padding="8dp"
-                android:text="@string/textview_string" />
+                android:padding="8dp" />
         </LinearLayout>
     </ScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
