--- a/app/src/main/res/layout/activity_after_login.xml
+++ b/app/src/main/res/layout/activity_after_login.xml
@@ -16,7 +16,8 @@
         <ScrollView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="3">
+            android:layout_weight="3"
+            android:fillViewport="false">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -153,7 +154,6 @@
                     android:textColor="#E91E63"
                     android:textSize="48sp"
                     android:textStyle="bold" />
-
             </LinearLayout>
         </ScrollView>
 
@@ -162,6 +162,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="4"
+            android:minHeight="400dp"
             android:numColumns="4" />
 
     </LinearLayout>
