--- a/app/src/main/res/layout/activity_show_f_c_m.xml
+++ b/app/src/main/res/layout/activity_show_f_c_m.xml
@@ -35,7 +35,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:padding="8dp"
-                android:text="@string/textview_string" />
+                android:textAlignment="center" />
         </LinearLayout>
     </ScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
